[package]
name = "discussion-slack-tracker"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
dotenv = "0.15.0"
flowsnet-platform-sdk = "0.1.5"
github-flows = "0.5.1"
log = "0.4.19"
slack-flows = "0.3.0"
tokio_wasi = { version = "1.25", features = ["macros", "rt"] }
